--- a/app/static/CSS/dark_mode.css
+++ b/app/static/CSS/dark_mode.css
@@ -1,6 +1,309 @@
-.dark-mode-bg{
-    background-color:#292929
-}
-.dark-mode-item-bg{
-background-color: #1f1f1f;
-}        
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+  }
+
+  *::-webkit-scrollbar {
+    display: none;
+  }
+
+  html {
+    overflow-x: hidden;
+  }
+
+  body,
+  html {
+    min-height: 100vh;
+  }
+
+  .dark-mode-bg {
+    background-color: #1f1f1f;
+  }
+
+  .dark-mode-item-bg {
+    background-color: #292929
+  }
+
+  .col-1 {
+    width: 8.33%;
+  }
+
+  .col-2 {
+    width: 16.66%;
+  }
+
+  .col-3 {
+    width: 25%;
+  }
+
+  .col-4 {
+    width: 33.33%;
+  }
+
+  .col-5 {
+    width: 41.66%;
+  }
+
+  .col-6 {
+    width: 50%;
+  }
+
+  .col-7 {
+    width: 58.33%;
+  }
+
+  .col-8 {
+    width: 66.66%;
+  }
+
+  .col-9 {
+    width: 75%;
+  }
+
+  .col-10 {
+    width: 83.33%;
+  }
+
+  .col-11 {
+    width: 91.66;
+  }
+
+  .col-12 {
+    width: 100%;
+  }
+
+  .flex {
+    display: flex;
+  }
+
+  .flex-centerize {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .flex-column {
+    flex-flow: column;
+  }
+
+  .flex-evenly {
+    justify-content: space-evenly;
+  }
+
+  .flex-between {
+    justify-content: space-between;
+  }
+
+  .flex-around {
+    justify-content: space-around;
+  }
+
+  .wt {
+    color: white;
+  }
+
+  .writing-padding {
+    padding: 2px 4px;
+  }
+
+  .no-overflow {
+    overflow: auto;
+  }
+
+  .no-edges {
+    border-radius: 5px;
+  }
+
+  .no-border {
+    border-width: 0px;
+    outline-width: 0px;
+  }
+
+  .no-display {
+    display: none;
+  }
+
+  .full-page-height {
+    min-height: 100vh;
+  }
+
+  .full-height {
+    height: 100%;
+  }
+
+  .text-centerize {
+    text-align: center;
+  }
+
+  .xl-font {
+    font-size: x-large;
+  }
+
+  .serif {
+    font-family: 'aldus', serif;
+  }
+
+  .stander-border {
+    border: 1px solid white;
+  }
+
+  .white-bg {
+    background-color: white;
+  }
+
+  .profile-image {
+    height: 30px;
+    width: 30px;
+    border-radius: 90px;
+  }
+
+  .pubcart {
+    height: 90vh;
+    margin: 1vh 5vw;
+  }
+
+  .transparent-btn {
+    border-width: 0px;
+    background-color: transparent;
+    color: #03dac5;
+  }
+
+  .alert-full {
+    position: fixed;
+    top: 0px;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.85);
+    display: flex;
+  }
+  .blue-box-shadow {
+    outline-width: 0px;
+    border-width: 0px;
+  }
+  .blue-box-shadow:focus {
+    box-shadow: 1px 2px 2px #018786;
+    outline-width: 0px;
+    border-width: 0px;
+    border-color: blue;
+  }
+  .to-control {
+    overflow: hidden;
+    transition: 0.4s;
+  }
+  .special-hover:hover{
+    font-size: x-large;
+    border-left: 1px solid white;
+    border-bottom: 1px solid white;
+  }
+
+
+  #sign-in-form {
+    display: none;
+  }
+
+  #navbar {
+    padding: 10px;
+    box-shadow: 0px 0px 4px #222;
+  }
+
+  #posts-scam {
+    height: 22vh;
+    margin: 1vh 0vw;
+  }
+
+  #validate {
+    background-color: #005457;
+  }
+
+  #post {
+    background-color: #005457;
+  }
+
+  #skip {
+    background-color: #b00a4c;
+    position: absolute;
+    top: 0vh;
+    right: 0px;
+    padding: 10px;
+  }
+
+  #quit-options {
+    background-color: #b00a4c;
+    position: absolute;
+    top: 0vh;
+    right: 0px;
+    padding: 5px;
+  }
+
+  #exit {
+    background-color: #b00a4c;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    padding: 10px;
+  }
+
+  #post-container {
+    width: 100%;
+    /* height: 66vh; */
+    padding: 0vw 6vw;
+  }
+
+  #post-description {
+    height: 7vh;
+  }
+
+  #container-post-form {
+    position: fixed;
+    top: 8vh;
+    right: 16.66%;
+    height: 100vh;
+    width: 0%;
+    overflow: hidden;
+  }
+
+  #post-form {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 75%;
+    border-left: 2px solid dotted;
+    border-bottom: 2px solid dotted;
+    border-bottom-left-radius: 55px;
+  }
+
+  #options {
+    position: fixed;
+    top: 8vh;
+    right: 0px;
+    height: 0vh;
+    /* width: 0%; */
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.8);
+    box-shadow: -2px 0px 4px #2f2f2f;
+    z-index: 10;
+  }
+
+  .container_for_editing {
+    width: 0px;
+    height: 0px;
+    overflow: hidden;
+  }
+
+  .hide-scroll {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+  .on-phone{display:none; overflow: hidden;}
+  .options-device-adjust{
+    width:25%;
+  }
+  @media screen and (max-width:700px) {
+    .on-pc{display:none;}
+    .on-phone{display:block;}
+    .full-on-phone{width: 100%;}
+    .options-device-adjust{
+    width:100%;
+  }
+
+  }
