--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -75,7 +75,7 @@
 
     <!-- navbar on phone -->
     <div class="col-12 on-phone">
-      <div  id="navbar" style="position:fixed; top:0px; width: 100%; height:8vh;"
+      <div  id="navbar" style="position:fixed; top:0px; width: 100%; height:8vh; z-index:100;"
             class="no-overflow flex flex-between dark-mode-item-bg writing-padding">
         <div class="col-7 wt flex">
           <div class="profile-image">
@@ -288,7 +288,7 @@
             placeholder="username" autofocus><br><br>
           <span class="wt flex flex-centerize serif"> Your password: </span>
           <input name="password_to_login" type="password"
-            class="no-edges text-centerize writing-padding blue-box-shadow" placeholder="password"><br><br>
+            class="no-edges text-centerize writing-padding blue-box-shadow" placeholder="password">
           <span class="wt flex flex-centerize serif"></span>
           <div class="flex flex-evenly">
             <button id="validate_to_login" class="wt serif col-2 no-edges writing-padding no-border" type="submit"
