--- a/app/templates/ph_register.html
+++ b/app/templates/ph_register.html
@@ -32,7 +32,7 @@
                               placeholder="create a password"><br><br>
                             <span class="wt flex flex-centerize serif" style="font-size: small;">Confirm password: </span>
                             <input name="c_password" type="password" class="no-edges text-centerize blue-box-shadow"
-                              placeholder="confirm password"><br><br><br><br>
+                              placeholder="confirm password"><br><br>
                             <span class="wt flex flex-centerize serif"></span>
                             <div class="flex flex-evenly">
                               <button id="validate" class="wt serif col-6 no-edges writing-padding no-border"
