--- a/app/templates/ph_login.html
+++ b/app/templates/ph_login.html
@@ -29,7 +29,7 @@
                                   placeholder="username" autofocus><br><br>
                                 <span class="wt flex flex-centerize serif" style="font-size: small;"> Your password: </span>
                                 <input name="password_to_login" type="password"
-                                  class="no-edges text-centerize writing-padding blue-box-shadow" placeholder="password"><br><br>
+                                  class="no-edges text-centerize writing-padding blue-box-shadow" placeholder="password">
                                 <span class="wt flex flex-centerize serif"></span>
                                 <div class="flex flex-evenly">
                                   <button id="validate_to_login" class="wt serif col-6 no-edges writing-padding no-border" type="submit"
