--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -288,7 +288,7 @@
             placeholder="username" autofocus><br><br>
           <span class="wt flex flex-centerize serif"> Your password: </span>
           <input name="password_to_login" type="password"
-            class="no-edges text-centerize writing-padding blue-box-shadow" placeholder="password">
+            class="no-edges text-centerize writing-padding blue-box-shadow" placeholder="password"><br><br>
           <span class="wt flex flex-centerize serif"></span>
           <div class="flex flex-evenly">
             <button id="validate_to_login" class="wt serif col-2 no-edges writing-padding no-border" type="submit"
