--- a/app/templates/ph_register.html
+++ b/app/templates/ph_register.html
@@ -26,13 +26,13 @@
                           <form action="" method="POST" class="flex flex-column flex-evenly col-11" style="height:80%;">
                             <span class="wt flex flex-centerize serif" style="font-size: small;"> Create a username:</span>
                             <input name="new_username" type="text" class="no-edges text-centerize blue-box-shadow"
-                              placeholder="username"><br><br>
+                              placeholder="username" required><br><br>
                             <span class="wt flex flex-centerize serif" style="font-size: small;"> Create password: </span>
                             <input name="password" type="password" class="no-edges text-centerize blue-box-shadow"
-                              placeholder="create a password"><br><br>
+                              placeholder="create a password" required><br><br>
                             <span class="wt flex flex-centerize serif" style="font-size: small;">Confirm password: </span>
                             <input name="c_password" type="password" class="no-edges text-centerize blue-box-shadow"
-                              placeholder="confirm password"><br><br>
+                              placeholder="confirm password" required><br><br>
                             <span class="wt flex flex-centerize serif"></span>
                             <div class="flex flex-evenly">
                               <button id="validate" class="wt serif col-6 no-edges writing-padding no-border"
